--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
@@ -39,7 +40,10 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "date-fns": "^3.6.0",
+    "electron-is-dev": "^3.0.1",
     "embla-carousel-react": "^8.6.0",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4",
     "express": "^5.2.1",
     "input-otp": "^1.4.2",
     "jspdf": "^4.0.0",
@@ -57,6 +61,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "usb": "^2.17.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
@@ -82,6 +87,7 @@
     "@craco/craco": "^7.1.0",
     "@eslint/js": "9.23.0",
     "autoprefixer": "^10.4.20",
+    "electron": "^40.0.0",
     "eslint": "9.23.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
