Fix Docker build: Add build dependencies for native modules

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,4 +1,14 @@
 FROM node:20-alpine
+
+# Install build dependencies for native modules (usb, escpos)
+RUN apk add --no-cache \
+    python3 \
+    make \
+    g++ \
+    gcc \
+    libusb-dev \
+    udev
+
 WORKDIR /app
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
